Closed Bug 939789 Opened 11 years ago Closed 11 years ago

TSan: data race dom/base/nsJSEnvironment.cpp:2576 nsJSContext::LikelyShortLivingObjectCreated()

Categories

(Core :: DOM: Events, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla28
Tracking Status
firefox28 --- fixed

People

(Reporter: decoder, Assigned: smaug)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tsan][qa-])

Attachments

(2 files)

The attached logfile shows a thread/data race (mozilla-central revision beddd6d4bcdf) detected by TSan (ThreadSanitizer).

Typically, races reported by TSan are not false positives, but it is possible that the race is benign. Even in this case though, we should try to come up with a fix unless this would cause inacceptable performance issues. Also note that seemingly benign races can possibly be harmful (also depending on the compiler and the architecture) [1].

If the bug cannot be fixed, then this bug should be used to either make a compile-time annotation for blacklisting or add an entry to the runtime blacklist.

[1] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
Component: General → DOM
Forgot to set needinfo, based on hg blame.
Flags: needinfo?(bugs)
LikelyShortLivingObjectCreated is getting called from a worker.
Component: DOM → DOM: Events
Yeah, this we should fix. Luckily not a critical issue, since the method call just gives a hint.
Assignee: general → bugs
Flags: needinfo?(bugs)
Attached patch patchSplinter Review
Just move the call a bit earlier in the method where we set mIsMainThreadEvent.
Attachment #8333884 - Flags: review?(continuation)
Attachment #8333884 - Flags: review?(continuation) → review+
https://hg.mozilla.org/mozilla-central/rev/f921dc945f7b
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
De-prioritizing QA verification of this bug. Please remove the [qa-] whiteboard tag and add the verifyme keyword if you think this needs our attention before Firefox 28 is released.
Whiteboard: [tsan] → [tsan][qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: