Bug 939789, call nsJSContext::LikelyShortLivingObjectCreated() only in the main thread, r=mccr8

--HG--
extra : rebase_source : 9ea7616a6396b63363f0edb434761c11a0f47a53